--- a/style.css
+++ b/style.css
@@ -1,194 +1,246 @@
 :root {
-    --background: rgb(104, 19, 19);
-    --primary: rgba(0, 214, 170, 0.85);
-    --secondary: rgba(0, 214, 170, 0.85);
-  }
-
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
-
-  body {
-    margin: 0;
-    background: #222;
-    font-family: "Work Sans", sans-serif;
-    font-weight: 400;
-  }
-
-  .content {
-    height: 200vh;
-
-    background-color: rgb(53, 49, 49);
-    background-blend-mode: multiply;
-    background-size: cover;
-    display: grid;
-    place-items: center;
-  }
-#welcome-section{
-height: 100vh;
-
+  --background: rgb(192, 47, 47);
+  --primary: rgba(65, 66, 75, 1);
+  --secondary: rgba(0, 214, 170, 0.85);
 }
-  /* navbar styles */
 
-  header {
-    background: var(--background);
-    text-align: center;
-    position: fixed;
-    z-index: 999;
-    width: 100%;
-  }
+*, *::before, *::after {
+  box-sizing: inherit;
+}
 
-  .nav-toggle {
-    position: absolute !important;
-  }
+body, html {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+   background: var(--primary);
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+}
 
-  .nav-toggle:focus ~ .nav-toggle-label {
-    outline: 3px solid rgba(lightblue, 0.75);
-  }
+/* navbar styles */
 
+header {
+  position: fixed;
+  background: var(--background);
+  text-align: center;
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  top: 0;
+  left: 0;
+  padding: 0.25em;
+  font-weight: bold;
+  border-bottom: white 2px;
+}
+
+.nav-toggle {
+  position: absolute !important;
+}
+
+.nav-toggle:focus~.nav-toggle-label {
+  outline: 3px solid rgba(lightblue, 0.75);
+}
+
+.nav-toggle-label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-left: 1em;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-toggle-label span, .nav-toggle-label span::before, .nav-toggle-label span::after {
+  display: block;
+  background: white;
+  height: 2px;
+  width: 2em;
+  border-radius: 2px;
+  position: relative;
+}
+
+.nav-toggle-label span::before, .nav-toggle-label span::after {
+  content: "";
+  position: absolute;
+}
+
+.nav-toggle-label span::before {
+  bottom: 7px;
+}
+
+.nav-toggle-label span::after {
+  top: 7px;
+}
+
+input {
+  display: none;
+}
+
+nav {
+  position: absolute;
+  text-align: center;
+  top: 100%;
+  left: 0;
+  background: var(--background);
+  width: 100%;
+  transform: scale(1, 0);
+  transform-origin: top;
+  transition: transform 400ms ease-in-out;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav li {
+  margin-bottom: 1em;
+  margin-left: 1em;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  opacity: 0;
+  transition: opacity 150ms ease-in-out;
+}
+
+nav a:hover {
+  color: #000;
+}
+
+.nav-toggle:checked~nav {
+  transform: scale(1, 1);
+}
+
+.nav-toggle:checked~nav a {
+  opacity: 1;
+  transition: opacity 250ms ease-in-out 250ms;
+}
+
+@media screen and (min-width: 800px) {
   .nav-toggle-label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin-left: 1em;
-    height: 100%;
-    display: flex;
-    align-items: center;
-  }
-
-  .nav-toggle-label span,
-  .nav-toggle-label span::before,
-  .nav-toggle-label span::after {
-    display: block;
-    background: white;
-    height: 2px;
-    width: 2em;
-    border-radius: 2px;
-    position: relative;
-  }
-
-  .nav-toggle-label span::before,
-  .nav-toggle-label span::after {
-    content: "";
-    position: absolute;
-  }
-
-  .nav-toggle-label span::before {
-    bottom: 7px;
-  }
-
-  .nav-toggle-label span::after {
-    top: 7px;
-  }
-  input {
     display: none;
   }
+  header {
+    display: grid;
+    grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
+  }
+  .logo {
+    grid-column: 2 / 3;
+  }
   nav {
-    position: absolute;
-    text-align: center;
-    top: 100%;
-    left: 0;
-    background: var(--background);
-    width: 100%;
-    transform: scale(1, 0);
-    transform-origin: top;
-    transition: transform 400ms ease-in-out;
+    /* the following lines are not from my video, but add Edge support */
+    position: relative;
+    text-align: left;
+    transition: none;
+    transform: scale(1, 1);
+    background: none;
+    top: initial;
+    left: initial;
+    /* end Edge support stuff */
+    grid-column: 3 / 4;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
-
   nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+    display: flex;
   }
-
   nav li {
-    margin-bottom: 1em;
-    margin-left: 1em;
+    margin-left: 3em;
+    margin-bottom: 0;
   }
-
   nav a {
-    color: white;
-    text-decoration: none;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    opacity: 0;
-    transition: opacity 150ms ease-in-out;
+    opacity: 1;
+    position: relative;
   }
-
-  nav a:hover {
-    color: #000;
+  nav a::before {
+    content: "";
+    display: block;
+    height: 5px;
+    background: rgb(19, 18, 18);
+    position: absolute;
+    bottom: -0.75em;
+    left: 0;
+    right: 0;
+    transform: scale(0, 1);
+    transition: transform ease-in-out 200ms;
   }
-
-  .nav-toggle:checked ~ nav {
+  nav a:hover::before {
     transform: scale(1, 1);
   }
+}
 
-  .nav-toggle:checked ~ nav a {
-    opacity: 1;
-    transition: opacity 250ms ease-in-out 250ms;
-  }
+/* Section styles */
+.content{
+ 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+section{
 
-  @media screen and (min-width: 800px) {
-    .nav-toggle-label {
-      display: none;
-    }
 
-    header {
-      display: grid;
-      grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
-    }
+  display: block;
+  height: 100vh;
+  width: 100vw;
+  text-align: center;
+  color: ivory;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+ 
+}
 
-    .logo {
-      grid-column: 2 / 3;
-    }
 
-    nav {
-      /* the following lines are not from my video, but add Edge support */
-      position: relative;
-      text-align: left;
-      transition: none;
-      transform: scale(1, 1);
-      background: none;
-      top: initial;
-      left: initial;
-      /* end Edge support stuff */
+#projects{
 
-      grid-column: 3 / 4;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
 
-    nav ul {
-      display: flex;
-    }
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 
-    nav li {
-      margin-left: 3em;
-      margin-bottom: 0;
-    }
+ 
 
-    nav a {
-      opacity: 1;
-      position: relative;
-    }
 
-    nav a::before {
-      content: "";
-      display: block;
-      height: 5px;
-      background: black;
-      position: absolute;
-      bottom: -0.75em;
-      left: 0;
-      right: 0;
-      transform: scale(0, 1);
-      transition: transform ease-in-out 250ms;
-    }
+}
+.project-tile{
+  padding: 10px;
 
-    nav a:hover::before {
-      transform: scale(1, 1);
-    }
-  }
+ 
+
+  
+}
+
+#contact {
+  background-color: (var(--primary));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  text-align: center;
+  width: 100%;
+
+  padding: 0 2rem;
+ 
+}
+
+
+.contact-links {
+  display: flex;
+  flex: row;
+  justify-content: center;
+
+  margin-top: 4rem;
+  flex-wrap: wrap;
+  margin-right: 20px;
+  padding: 20px;
+}
+
